--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "JBtronics\\PDFox\\": "tests/"
+      "JBtronics\\PDFox\\Tests": "tests/"
     }
   },
   "config": {
